# adv_mla_lab_1

./: Makefile  README.md  pyproject.toml
models/: rf2.joblib
notebooks/: 36120-25SP-Lab01_Ex02-Solutions.ipynb  36120-25SP-Lab01_Ex03-Solutions.ipynb
